- Adicao de hackergotchi - Remocao de trechos comentados - Melhorias diversas

--- a/separando_membros_gnome/apresentacao.tex
+++ b/separando_membros_gnome/apresentacao.tex
@@ -20,25 +20,18 @@
 % ------------------------------------------------------------------------------
 
 \usecolortheme{beaver}
-%\usetheme{default}
-%\useinnertheme{rounded}
-%\usecolortheme{seagull}
-%\usecolortheme{crane}
-%\usecolortheme{dove}
-%\usecolortheme{beetle}
-%\useoutertheme{tree}
 
 % ------------------------------------------------------------------------------
 \title[Como os tradutores inativos do GNOME foram separados dos ativos]
 {
     Como os tradutores inativos do GNOME foram separados dos ativos
 }
-\subtitle{Lições aprendidas com hacking no Damnied Lies}
+\subtitle{Lições aprendidas com hacking no Damned Lies}
 \author[Adorilson Bezerra]
 {
     Adorilson Bezerra
 }
-\date{23 de julho de 2011}
+\date{\today}
 \logo{\includegraphics{img/gnome-gtp}}
 % ------------------------------------------------------------------------------
 
@@ -50,17 +43,18 @@
 \frame
 {
     \frametitle{Ado... o que?}
+    \includegraphics[scale=0.3]{img/hackergotchi}
     \begin{itemize}
         \item adorilson @ internet
-        \item adorilson.bezerra@ifrn.edu.br
+        \item adorilson.bezerra no ifrn.edu.br
     \end{itemize}
-    
-    
-    
 }
 
 % ------------------------------------------------------------------------------
 \section{Introdução}
+
+%\subsection{Sobre o GNOME}
+
 \subsection{Sobre o damned-lies}
 \frame
 {
@@ -88,6 +82,7 @@
         \includegraphics[width=3cm]{img/gnome1}
         \hspace{0.1\textwidth}
         \includegraphics[width=3cm]{img/gnome2}
+        }
     \end{figure}
 }
 \frame
