Reorganização do slides 'Eventos Rocks'(incluido adição dos créditos das imagens)

--- a/separando_membros_gnome/apresentacao.tex
+++ b/separando_membros_gnome/apresentacao.tex
@@ -74,15 +74,24 @@
 \frame
 {
     \frametitle{Eventos rocks!!!}
-    \begin{figure}[t]
-    \centering
-        %http://blog.krix.com.br/2010/11/07/iv-ensl-e-vii-forum-gnome-%E2%80%93-parte-22/
-        \includegraphics[width=3cm]{img/ensl}
-        \hspace{0.1\textwidth}
-        \includegraphics[width=3cm]{img/gnome1}
-        \hspace{0.1\textwidth}
-        \includegraphics[width=3cm]{img/gnome2}
-    \end{figure}
+    \begin{columns}
+        \column{0.4\textwidth}
+        \begin{figure}[t]
+            \centering
+            \includegraphics[width=4.5cm]{img/ensl}
+        \end{figure}
+        \column{0.4\textwidth}
+        \begin{figure}[t]
+            \centering
+            \includegraphics[width=4.5cm]{img/gnome2}
+        \end{figure}
+        \column{0.4\textwidth}
+        \begin{figure}[t]
+            \centering
+            \includegraphics[width=4.5cm]{img/gnome1}
+        \end{figure}
+    \end{columns}
+    {\tiny Fotos por: Krix Apolinário (\url{http://blog.krix.com.br/2010/11/iv-ensl-e-vii-forum-gnome-\%e2\%80\%93-parte-22/})}
 }
 \frame
 {
