Substituindo imagem do Buzz por tela de commits

--- a/separando_membros_gnome/apresentacao.tex
+++ b/separando_membros_gnome/apresentacao.tex
@@ -162,9 +162,9 @@
 }
 \frame
 {
-    \frametitle{Ao infinito e além}
+    \frametitle{Envolva-se mais}
     \begin{figure}[t]
-        \includegraphics[scale=0.7]{img/buzz}
+        \includegraphics[scale=0.3]{img/outras_contribuicoes}
     \end{figure}
 }
 \frame
