Melhorias diversas - Substituido imagem de Python por Python+Django - Adição de slide bonus (GNOME Goals)

--- a/separando_membros_gnome/apresentacao.tex
+++ b/separando_membros_gnome/apresentacao.tex
@@ -113,9 +113,9 @@
 }
 \frame
 {
-    \frametitle{Faça suas escolhas}
+    \frametitle{Ferramentas}
     \begin{figure}[t]
-        \includegraphics[scale=0.5]{img/python}
+        \includegraphics[scale=0.6]{img/python_django}
     \end{figure}
 }
 \frame
@@ -169,7 +169,7 @@
 }
 \frame
 {
-    \frametitle{Ganhe o respeito}
+    \frametitle{Participe da governança}
     \begin{figure}[t]
         \includegraphics[scale=0.25]{img/brasilia}
     \end{figure}
@@ -191,5 +191,11 @@
     \end{figure}
 }
 
+\frame{
+	\frametitle{GNOME Goals (Slide bônus)}
+	\begin{figure}[t]
+		\includegraphics[scale=0.3]{img/gnome_goals}
+	\end{figure}
+}
 
 \end{document}
