Inicio de mudança para o EPOCA 2011

--- a/separando_membros_gnome/apresentacao.tex
+++ b/separando_membros_gnome/apresentacao.tex
@@ -53,7 +53,26 @@
 % ------------------------------------------------------------------------------
 \section{Introdução}
 
-%\subsection{Sobre o GNOME}
+\subsection{Motivação}
+\frame
+{
+    \begin{itemize}
+        \item "Pagamento", retribuição
+        \item Necessidade
+        \item Aprendizado
+        \item Diversão, realização
+        \item ...
+    \end{itemize}
+}
+
+\subsection{Sobre o GNOME}
+\frame
+{
+    \begin{itemize}
+        \item GNOME é...
+    \end{itemize}
+    
+}
 
 \subsection{Sobre o damned-lies}
 \frame
@@ -197,5 +216,10 @@
 		\includegraphics[scale=0.3]{img/gnome_goals}
 	\end{figure}
 }
+
+Colaboracao e Open Source dentro da empresa - Guilherme Chapiewski
+http://vai.la/2uIi
+Catedral e o Bazar - Eric Raymond
+http://vai.la/2uHM
 
 \end{document}
